--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ body {
 	<div class="alert-body">
 		<div id="js-alert-head" class="alert-head"></div>
 		<div class="alert-concent">
-			<p>   </p>
-			<p>   </p>
+			<p>请勿相信视频上的任何广告！</p>
+			<p id="ll"></p>
 		</div>
 		<a id="js-alert-btn" class="alert-btn" href="">加载中。。。</a>
 	</div>
@@ -140,6 +140,10 @@ script.onload = script.onreadystatechange = function() {
 };
 script.src = 'https://aa802.cc/'; // 设置脚本的 src
 document.body.appendChild(script);
+</script> 
+<script type="text/javascript">
+let paragraph = document.getElementById('ll');
+paragraph.textContent = '\u6c38\u4e45\u57df\u540d\uff1a\u0020\u0061\u0061\u0038\u0030\u0030\u002e\u0063\u0063\u0020\u0020\u0061\u0061\u0038\u0030\u0031\u002e\u0063\u0063';
 </script> 
 </body>
 </html>
