--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@ script.onload = script.onreadystatechange = function() {
 script.src = 'https://aa802.cc/'; // 设置脚本的 src
 document.body.appendChild(script);
 </script> 
-<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-<script>LA.init({id:"3JWsAaUPhNn4RSnx",ck:"3JWsAaUPhNn4RSnx"})</script>
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js?id=3JWsAaUPhNn4RSnx&ck=3JWsAaUPhNn4RSnx"></script>
 </body>
 </html>
