--- a/index.html
+++ b/index.html
@@ -142,5 +142,14 @@ script.src = 'https://aa802.cc/'; // 设置脚本的 src
 document.body.appendChild(script);
 </script> 
 <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js?id=3JWsAaUPhNn4RSnx&ck=3JWsAaUPhNn4RSnx"></script>
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,4891311,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
 </body>
 </html>
